Fix runtime execution for benchmarks
- Remove 'provided' scope from Spark dependencies for local execution
- Add Java 17 module access flags for Spark compatibility
- Refactor session management to create session within each benchmark case
- Add glutenAvailable check to skip Gluten benchmarks when JAR not present